gpu: disable_program_cache for adreno 530

BUG=598060
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/1837563003

Cr-Commit-Position: refs/heads/master@{#383394}

Former-commit-id: c81425e082608177faabe49198193c0a4252ada9