gpu/config/gpu_driver_bug_list_json.cc
@@ -19,7 +19,7 @@ const char kGpuDriverBugListJson[] = LONG_STRING_CONST(
 {
   "name": "gpu driver bug list",
   // Please update the version number whenever you change this file.
-  "version": "8.55",
+  "version": "8.56",
   "entries": [
     {
       "id": 1,
@@ -1430,8 +1430,8 @@ LONG_STRING_CONST(
     },
     {
       "id": 124,
-      "description": "Certain Adreno 4xx drivers often crash in glProgramBinary.",
-      "cr_bugs": [486117],
+      "description": "Certain Adreno 4xx and 5xx drivers often crash in glProgramBinary.",
+      "cr_bugs": [486117, 598060],
       "os": {
         "type": "android"
       },
@@ -1439,7 +1439,7 @@ LONG_STRING_CONST(
         "op": ">=",
         "value": "103.0"
       },
-      "gl_renderer": "Adreno \\(TM\\) 4.*",
+      "gl_renderer": "Adreno \\(TM\\) [45].*",
       "features": [
         "disable_program_cache"
       ]
